--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WorkoutEngineer</string>
+    <string name="app_name_display">Workout Engineer</string>
+    <string name="menu_item_settings">Settings</string>
+    <string name="menu_item_about">About</string>
 </resources>
