--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,19 @@
     <string name="enter_the_name_of_your_workout_dialog">Enter the name of your workout</string>
     <string name="done_button_text">Done</string>
     <string name="workout_name">Workout name</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_no_workouts_created">Oops...</string>
+    <string name="no_workouts_dialog_error_message">It looks like you have not created any workout yet...</string>
+    <string name="go_back_button">Go back</string>
+    <string name="progress_title">Progress</string>
+    <string name="congratulation_title">Well done!</string>
+    <string name="congratulation_text">You nailed that workout!</string>
+    <string name="finish_workout_button">Finish</string>
+    <string name="complete_edit_button">Complete Edit</string>
+    <string name="delete_workout_menu_item">Delete workout</string>
+    <string name="delete_workout_text">Are you sure you want to delete this workout?</string>
+    <string name="button_yes">Yes</string>
+    <string name="no_button">No</string>
+    <string name="action_not_performed">Action not performed</string>
 </resources>
