--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,19 +31,12 @@
     <string name="action_not_performed">Action not performed</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
+    <!-- Settings strings -->
+    <string name="theme_title">Theme</string>
+    <string name="dark_mode_on">If you need more light in your life</string>
+    <string name="dark_mode_off">Perfect choice for night owls</string>
+    <string name="dark_mode_title">Dark Mode</string>
 
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="title_activity_settings2">SettingsActivity2</string>
+    <string name="metric_title">Metric</string>
+    <string name="list_preference_title">Metric System</string>
 </resources>
